--- a/Restaurant_AD0039/Restaurant_AD0039.csproj
+++ b/Restaurant_AD0039/Restaurant_AD0039.csproj
@@ -83,6 +83,11 @@
     <Compile Include="ADD\ADDSandwiches.Designer.cs">
       <DependentUpon>ADDSandwiches.cs</DependentUpon>
     </Compile>
+    <Compile Include="DataBase\Database21DataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database21DataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="User\Appetizers.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -178,6 +183,17 @@
     <EmbeddedResource Include="User\SeaFood.resx">
       <DependentUpon>SeaFood.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="DataBase\Database21DataSet.xsc">
+      <DependentUpon>Database21DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="DataBase\Database21DataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Database21DataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DataBase\Database21DataSet.xss">
+      <DependentUpon>Database21DataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -195,11 +211,5 @@
     <None Include="Resources\download.jpg" />
   </ItemGroup>
   <ItemGroup />
-  <ItemGroup>
-    <Content Include="..\..\..\Database21.accdb">
-      <Link>DataBase\Database21.accdb</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
