--- a/Restaurant_AD0039/App.config
+++ b/Restaurant_AD0039/App.config
@@ -6,6 +6,9 @@
         <add name="Restaurant_AD0039.Properties.Settings.Database21ConnectionString"
             connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Database21.accdb"
             providerName="System.Data.OleDb" />
+        <add name="Restaurant_AD0039.Properties.Settings.Database21ConnectionString1"
+            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Users\SCHOOL\Desktop\Database21.accdb;Persist Security Info=True"
+            providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
