--- a/Restaurant_AD0039/Restaurant_AD0039.csproj
+++ b/Restaurant_AD0039/Restaurant_AD0039.csproj
@@ -210,6 +210,11 @@
   <ItemGroup>
     <None Include="Resources\download.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="DataBase\Database21.accdb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
