--- a/Restaurant_AD0039/App.config
+++ b/Restaurant_AD0039/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="Restaurant_AD0039.Properties.Settings.Database21ConnectionString"
-            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\DataBase\Database21.accdb"
+            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Database21.accdb"
             providerName="System.Data.OleDb" />
         <add name="Restaurant_AD0039.Properties.Settings.Database21ConnectionString1"
             connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Users\SCHOOL\Desktop\Database21.accdb;Persist Security Info=True"
